fdo#32773 LibO thinks comments separate words

Commments are represented by post-it note fields. When a comment is inserted, a marker character (CH_TXTATR_INWORD = 0x2) is inserted in the text node. This marker is not a word character, so it results in splitting any word it's inserted into.

This change updates SwTxtNode::BuildConversionMap so that it eliminates post-it note field markers when expanding strings. It also updates the ModelToViewHelper functions to work properly with the new change, since it's now possible for expanded strings to be smaller than the original node text.

Change-Id: Ia516e6b612becb2dfc2a5922306b89e2d8dd65d3